added rush schedule

--- a/recruit.html
+++ b/recruit.html
@@ -73,7 +73,54 @@
 											<h2>Intersted in joining Delta Upsilon?</h2>
 											<h3>Send us your information!</h3>
 										</header>
-										<iframe src="https://docs.google.com/forms/d/1oRWvFf8YcCas8BooZYvwQ-uFmmjyQ989Z0MxgBWT0CE/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+										<div style="float: left">
+										<iframe src="https://docs.google.com/forms/d/1oRWvFf8YcCas8BooZYvwQ-uFmmjyQ989Z0MxgBWT0CE/viewform?embedded=true" width="760" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+										</div>
+
+										<h2>Fall Rush Schedule</h2>
+											<ul>
+											<li>9/29-Frisbee @ 5pm on LLC Lawn</li>
+
+											<li>9/30- Rec Day @ 6pm on Turf Fields</li>
+
+											<li>10/1- Carson late Night @ 9pm</li>
+
+											<li>10/2- Football tailgate @ 5pm (1391 E. 20th Ave)</li>
+
+											<li>10/3- BBQ and Bonfire @ 5pm (1391 E. 20th Ave)</li>
+
+											<li>10/4- Poker night @ 8pm (1391 E. 20th Ave)</li>
+
+											<li>10/6- Chapter and Carson Late Night (TBA)</li>
+
+											<li>10/7- Museum of Art @ 4pm</li>
+
+											<li>10/8- Tracktown @ 6pm</li>
+
+											<li>10/9- Stories and Cigars @ 7pm (1391 E. 20th Ave)</li>
+
+											<li>10/10-Volleyball Game @ MKA @7pm</li>
+
+											<li>10/11- Football Watch Party (1391 E. 20th Ave)</li>
+
+											<li>10/12- Community Service Event (TBA)</li>
+
+											<li>10/13- Chapter and Carson Late Night (TBA)</li>
+
+											<li>10/14- Game Night @ 1391 E. 20th Ave</li>
+
+											<li>10/15- Sunset Hike @ 5pm</li>
+
+											<li>10/16- Sandboarding in Florence (invite only)</li>
+
+											<li>10/17- Dinner (Invite Only)</li>
+
+											<li>10/18- Bid Day *</li>
+
+											<li>*Activity TBD</li>
+										</ul>
+
+										
 										
 									</section>
 
