--- a/about.html
+++ b/about.html
@@ -92,6 +92,9 @@
 										<p>
 											Delta Upsilon is the world's only international fraternity committed to sharing our values through practice of non-secrecy and non-hazing. Our mission is to build better men by focusing on our non-secret heritage and our Four Founding Principles: The Promotion of Friendship, The Diffusion of Liberal Culture, The Development of Character and The Advancement of Justice. Our vision is to be the premier men’s fraternity committed to Building Better Men for a global society through service, leadership development, and the lifelong personal growth of our diverse membership.
 										</p>
+										<p>
+											The Oregon Colony of Delta Upsilon colonized winter term of 2014.  We plan to charter in winter of 2015.  We are excited to get involved at the University of Oregon!
+										</p>
 
 									</section>
 
