Updated page titles
so google will love us again

--- a/recruit.html
+++ b/recruit.html
@@ -17,7 +17,7 @@
 
 </script>
 	<head>
-		<title>Recruitment</title>
+		<title>Recruitment | Delta Upsilon | University of Oregon</title>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
