--- a/external.html
+++ b/external.html
@@ -17,7 +17,7 @@
 
 </script>
 	<head>
-		<title>Executive Board</title>
+		<title>VP of External Relations | Delta Upsilon | University of Oregon</title>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
