--- a/recruitment.html
+++ b/recruitment.html
@@ -17,7 +17,7 @@
 
 </script>
 	<head>
-		<title>Executive Board</title>
+		<title>VP of Recruitment | Delta Upsilon | University of Oregon</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
