dont worry about it

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<meta name="google-site-verification" content="TEwlJ8gLFD17nQhTh6jaSwAPH9d_zTAYKPT-B9DsZZg" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/config.js"></script>
 		<script src="js/skel.min.js"></script>
