still trying to make google love us

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
+		<meta name="description" content="This is the official website for the Oregon Chapter of Delta Upsilon.  Located at the University of Oregon in the quaint city of Eugene." />
 		<meta name="keywords" content="" />
 		<meta name="google-site-verification" content="TEwlJ8gLFD17nQhTh6jaSwAPH9d_zTAYKPT-B9DsZZg" />
 		<script src="js/jquery.min.js"></script>
