--- a/external.html
+++ b/external.html
@@ -91,10 +91,10 @@
 									<section>
 										<header>
 											<h2>VP of External Relations</h2>
-											<h3>Michael Long</h3>
+											<h3>Brandon Brezic</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Long.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Breznic.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president external relations serves on the executive 
 												council and plans and directs the chapter’s efforts in 
@@ -106,8 +106,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>760-887-78658</li>
-												<li>Mlong3@uoregon.edu</li>
+												<li>503-422-7233</li>
+												<li>bbrezic@uoregon.edu</li>
 											</ul>
 									</section>
 
