--- a/loss.html
+++ b/loss.html
@@ -91,7 +91,7 @@
 									<section>
 										<header>
 											<h2>Vice President of Loss Prevention</h2>
-											<h3>Fintan Doyle</h3>
+											<h3>Spencer Johnson</h3>
 										</header>
 										<div>
    												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/fintan.jpg" alt="" /></a></p>
@@ -108,8 +108,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li></li>
-												<li></li>
+												<li>971-832-0625</li>
+												<li>sjohnso7@uoregon.edu</li>
 											</ul>
 					
 									</section>
