--- a/recruitment.html
+++ b/recruitment.html
@@ -89,7 +89,7 @@
 									<section>
 										<header>
 											<h2>Vice President of Recruitment</h2>
-											<h3>Hayden Rahn</h3>
+											<h3>Bhavin Patel</h3>
 										</header>
 										<div>
    												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Rahn.jpg" alt="" /></a></p>
@@ -99,8 +99,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>951-553-9285</li>
-												<li>hrahn@uoregon.edu</li>
+												<li>678-477-2554</li>
+												<li>bnp@uoregon.edu</li>
 											</ul>
 										
 									</section>
