--- a/admin.html
+++ b/admin.html
@@ -91,7 +91,7 @@
 									<section>
 										<header>
 											<h2>Vice President of Administration</h2>
-											<h3>Mitchell Parks</h3>
+											<h3>James Dolan</h3>
 										</header>
 										<div>
    												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Mitch.jpg" alt="" /></a></p>
@@ -105,8 +105,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>541-913-4994</li>
-												<li>mparks@uoregon.edu</li>
+												<li>503-347-2549</li>
+												<li>jdolan@uoregon.edu</li>
 											</ul>
 									</section>
 
