--- a/finance.html
+++ b/finance.html
@@ -91,7 +91,7 @@
 									<section>
 										<header>
 											<h2>Vice President of Finance</h2>
-											<h3>Kyle Crair</h3>
+											<h3>Kennedy Salveter</h3>
 										</header>
 										<div>
    												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/kc.jpg" alt="" /></a></p>
@@ -105,8 +105,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>310-570-3954</li>
-												<li>kylecrair@gmail.com</li>
+												<li>503-927-8664</li>
+												<li>salveter@uoregon.edu</li>
 											</ul>
 									
 									</section>
