--- a/pres.html
+++ b/pres.html
@@ -91,10 +91,10 @@
 									<section>
 										<header>
 											<h2>President</h2>
-											<h3>Grayson McCormick</h3>
+											<h3>Hayden Rahn</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Rahn.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The chapter president will serve as the chief executive officer 
 												and chief operating officer of the chapter. He shall be the 
@@ -105,8 +105,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>858-449-0678</li>
-												<li>grayson14@gmail.com</li>
+												<li>951-553-9285</li>
+												<li>hrahn@uoregon.edu</li>
 											</ul>
 									
 									</section>
