Updated exec and recruit

--- a/admin.html
+++ b/admin.html
@@ -94,7 +94,7 @@
 											<h3>James Dolan</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Mitch.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/James.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president administration on the executive council, 
 												takes minutes of all official meetings of the chapter, and 
