--- a/recruit.html
+++ b/recruit.html
@@ -79,45 +79,34 @@
 
 										<h2>Fall Rush Schedule</h2>
 											<ul>
-											<li>9/29-Frisbee @ 5pm on LLC Lawn</li>
+											<li>3/31 - Field Day @ 7pm on Turf Fields</li>
 
-											<li>9/30- Rec Day @ 6pm on Turf Fields</li>
+											<li>4/1 - Carson Late Night @ 7pm</li>
 
-											<li>10/1- Carson late Night @ 9pm</li>
+											<li>4/2 - Story Night @ 7pm</li>
 
-											<li>10/2- Football tailgate @ 5pm (1391 E. 20th Ave)</li>
+											<li>4/3 - Lunch/Dinner Outings</li>
 
-											<li>10/3- BBQ and Bonfire @ 5pm (1391 E. 20th Ave)</li>
+											<li>4/4 - Community Service @ 11am</li>
 
-											<li>10/4- Poker night @ 8pm (1391 E. 20th Ave)</li>
+											<li>4/5 - Break</li>
 
-											<li>10/6- Chapter and Carson Late Night (TBA)</li>
+											<li>4/6 - Chapter @ 8pm</li>
 
-											<li>10/7- Museum of Art @ 4pm</li>
+											<li>4/7 - Campus Wide Capture the Flag @ 7pm</li>
 
-											<li>10/8- Tracktown @ 6pm</li>
+											<li>4/8 - Carson Late Night @ 8pm</li>
 
-											<li>10/9- Stories and Cigars @ 7pm (1391 E. 20th Ave)</li>
+											<li>4/9 - Break</li>
 
-											<li>10/10-Volleyball Game @ MKA @7pm</li>
+											<li>4/10 - Afternoon Potluck @ 5pm</li>
 
-											<li>10/11- Football Watch Party (1391 E. 20th Ave)</li>
+											<li>4/11 - Invite Only Golf Range @ 1pm</li>
 
-											<li>10/12- Community Service Event (TBA)</li>
+											<li>4/12 - Invite Only Dinner @ 6pm</li>
 
-											<li>10/13- Chapter and Carson Late Night (TBA)</li>
+											<li><a href = "https://www.facebook.com/groups/397819053730475/">Facebook Group</a></li>
 
-											<li>10/14- Game Night @ 1391 E. 20th Ave</li>
-
-											<li>10/15- Sunset Hike @ 5pm</li>
-
-											<li>10/16- Sandboarding in Florence (invite only)</li>
-
-											<li>10/17- Dinner (Invite Only)</li>
-
-											<li>10/18- Bid Day *</li>
-
-											<li>*Activity TBD</li>
 										</ul>
 
 										
