--- a/finance.html
+++ b/finance.html
@@ -94,7 +94,7 @@
 											<h3>Kennedy Salveter</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/kc.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Kennedy.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president finances serves on the executive council 
 												and is directly responsible for the receipt, care, and 
