--- a/loss.html
+++ b/loss.html
@@ -94,7 +94,7 @@
 											<h3>Spencer Johnson</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/fintan.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Spencer.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president risk management serves on the executive 
 												council and works closely with them to help prevent and 
