--- a/recruitment.html
+++ b/recruitment.html
@@ -92,7 +92,7 @@
 											<h3>Bhavin Patel</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Rahn.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Bhavin.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president of recruitment serves on the executive council and coordinates the chapter’s recruitment effort.</p>
 											</div>
